# printing-erp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SPEC.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  clippy.toml  deny.toml
backend/.cargo/: audit.toml
backend/migrations/: 20260623000001_init.down.sql  20260623000001_init.up.sql  20260623000002_users_rls.down.sql  20260623000002_users_rls.up.sql  20260624000001_assets.down.sql  20260624000001_assets.up.sql  20260624000003_auth_tokens.up.sql  20260624000003_business_settings.down.sql  20260624000003_business_settings.up.sql  20260624000004_auth_tokens.down.sql  20260624000004_auth_tokens.up.sql  20260625000001_crm.down.sql  20260625000001_crm.up.sql
backend/src/: app.rs  clock.rs  config.rs  db.rs  main.rs  telemetry.rs  testsupport.rs
backend/src/assets/: error.rs  limits.rs  mod.rs  model.rs  repo.rs
backend/src/auth/: claims.rs  context.rs  error.rs  fixtures.rs  limits.rs  login.rs  logout.rs  mod.rs  notifier.rs  opaque.rs  password.rs  refresh.rs  reset.rs  session.rs  tenants.rs
backend/src/authz/: capability.rs  mod.rs  permission.rs
backend/src/crm/: error.rs  limits.rs  mod.rs  model.rs  repo.rs
backend/src/domain/: ids.rs  limits.rs  mod.rs  password.rs  settings.rs  user.rs
backend/src/http/: auth_principal.rs  limits.rs  mod.rs  require.rs  router.rs  state.rs  tenant.rs
backend/src/http/routes/: assets.rs  auth.rs  contacts.rs  customers.rs  health.rs  mod.rs  settings.rs  tenant.rs  users.rs
backend/src/storage/: error.rs  limits.rs  mod.rs  s3.rs
db/init/: 00-app-role.sql
deploy/chart/: .helmignore  Chart.yaml  README.md  values.yaml
deploy/chart/ci/: full-values.yaml
deploy/chart/templates/: NOTES.txt  _helpers.tpl  backend-config.yaml  backend-deployment.yaml  backend-externalsecret.yaml  backend-service.yaml  bootstrap-job.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  redis.yaml
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
