[package]
name = "printing-erp"
description = "Print MIS/ERP backend: HTTP API server (axum + sqlx + tokio)."
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/tomkapa/printing-erp"
authors = ["Tom Tran"]

[dependencies]
# Async runtime & HTTP stack.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time", "sync"] }
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "timeout", "cors", "request-id"] }

# Persistence. `macros` is enabled only for `sqlx::migrate!` (compile-time
# embedding of migration files). The compile-time `query!`/`query_as!` macros
# are banned by CLAUDE.md §10 — runtime `sqlx::query` with bound params is used.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate", "macros"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Authentication & cryptography (issue #12).
# - jsonwebtoken: HS256 access-token signing/verification. We use only its
#   signature + claim-deserialization path and validate `exp`/`iat` ourselves
#   against the injected Clock (CLAUDE.md §11); its heavy transitive `ring` is
#   already in the tree via rustls.
# - argon2: OWASP-recommended argon2id password hashing/verification (constant-
#   time). A memory-hard KDF must never be hand-rolled. Re-exports `password-hash`
#   as `argon2::password_hash` (PHC string type), so no separate dep is needed.
# - rand / sha2 / base64: already transitive (via rustls/sqlx); declared direct
#   for CSPRNG token-secret generation (OsRng), SHA-256 token hashing, and
#   base64url token encoding respectively. No new crates enter the tree.
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# Serialization, configuration & secrets.
serde = { version = "1", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
secrecy = { version = "0.10", features = ["serde"] }

# Errors.
thiserror = "2"
anyhow = "1"

# Instrumentation (CLAUDE.md §2).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.31"
opentelemetry = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", default-features = false, features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.30"

# Shared value types.
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

# Object storage (CLAUDE.md §8 justification): the official, audited AWS SDK is
# the only SigV4 + presigning implementation we trust — a signing bug would be a
# security bug, and correctness/safety lead our priorities. One code path serves
# S3, Cloudflare R2 and MinIO via a custom `endpoint_url` + `force_path_style`.
# Static credentials and a hand-built client config let us avoid `aws-config`.
aws-sdk-s3 = "1.96.0"
# `dyn`-compatible async trait for the `ObjectStore` boundary so `AppState` holds
# `Arc<dyn ObjectStore>` without threading a generic through every handler.
async-trait = "0.1.89"

[dev-dependencies]
# Boundary-level JSON for tests only (serde deserialization paths, HTTP bodies).
# Dev-only, so the zero-dependency bar (CLAUDE.md §8) is lower.
serde_json = "1"
# In-memory exercising of the axum router/extractors without a live socket.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# Raw HTTP PUT/GET against presigned URLs in the live MinIO round-trip test —
# exercises the URL exactly as a browser would. No TLS feature: the local MinIO
# (docker-compose) is plain HTTP, so the default-tls/rustls trees are not pulled.
reqwest = { version = "0.13.4", default-features = false }

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_debug_implementations = "warn"
# Lint *groups* sit at priority -1 so the individual lints above can override.
rust_2024_compatibility = { level = "warn", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
future_incompatible = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
as_conversions = "deny"
mem_forget = "deny"
float_cmp = "deny"
# Justified deviations (CLAUDE.md §7 permits removing a lint with justification):
# - multiple_crate_versions: large async trees (axum + sqlx + opentelemetry)
#   unavoidably pull duplicate transitive versions; not actionable in app code.
# - module_name_repetitions: noisy on the `error::*Error` convention we use.
# - redundant_pub_crate: directly conflicts with rustc's `unreachable_pub`.
# - cargo_common_metadata: this crate is an internal binary, never published.
# - doc_markdown: purely cosmetic backtick suggestions on product nouns.
multiple_crate_versions = "allow"
module_name_repetitions = "allow"
redundant_pub_crate = "allow"
cargo_common_metadata = "allow"
doc_markdown = "allow"

[profile.release]
panic = "abort"
